[package]
name = "acm_discord_bot"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-service = { version = "0.7.2", features = ["bot-serenity"] }
anyhow = "1.0.66"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-secrets = "0.7.2"
tracing = "0.1.37"
