[package]
name = "acm_discord_bot"
version = "0.3.0"
edition = "2021"
publish = false

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
diesel = { version = "2.0.2", features = ["postgres"] }
lazy_static = "1.4.0"
regex = "1.7.0"